# tiro

./: .gitignore  LICENSE  Package.resolved  Package.swift  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: macos-14.yml  release.yml
Prototypes/CoreML/: Package.resolved  Package.swift
Sources/Tiro/: AppDelegate.swift  AppPaths.swift  AudioRecorder.swift  BuildFeatures.swift  CommandLineToolInstaller.swift  CommandLineToolSettingsView.swift  DestinationTracker.swift  DiagnosticsReport.swift  DictationPreferencesView.swift  DictationShortcut.swift  ErrorRecovery.swift  FileTranscriptionWindowController.swift  HistoryView.swift  HotkeyManager.swift  LoginItemManager.swift  ModelDownloadState.swift  (+35 more)
docs/: BETA_TESTING.md  COMMAND_LINE.md  DEVELOPMENT.md  RELEASING.md  coreml-prototype.md
native/: Info.plist
scripts/: build_native_app.sh  prepare_release_environment.py  release_metadata.sh  setup_local_signing.sh  smoke_release.sh  test_all.sh  test_app_paths_migration.sh  test_coreml_production.sh  test_coreml_prototype.sh  test_hotkey_state.sh  test_private_file_permissions.sh  test_release_engineering.sh  test_snippet_edit_state.sh  test_sponsorship_builds.sh  test_support_prompt_policy.sh  test_swift.sh  validate_macos_compatibility.py  worker_entry.py
tests/: test_release_environment.py  test_worker.py
tiro_worker/: __init__.py  common.py  models.py  parakeet_compat.py  server.py  storage.py  text.py  transcriptions.py
(+55 files in other folders)
