[project]
name = "tiro"
version = "0.1.0"
description = "Private local dictation for Apple Silicon"
requires-python = ">=3.11"
dependencies = [
  "mlx-audio>=0.4.0",
  "parakeet-mlx>=0.4.0",
]

[project.optional-dependencies]
bundle = [
  "pyinstaller>=6.0,<7",
  "uv>=0.8,<0.9",
]

[tool.uv]
package = false
